# advanced-github-code-reviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  reset_db.py  run.py  scaffold.py  visualize_graph.py
app/: main.py
app/api/: deps.py
app/api/routes/: chat.py  hitl.py  repos.py  review.py  webhook.py
app/core/: config.py  exceptions.py  logger.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  message.py  pull_request.py  repository.py  review.py  review_step.py  thread.py
app/graph/: nodes.py  state.py  workflow.py
app/mcp/: filesystem_client.py  github_client.py  sandbox_client.py
app/sandbox/: docker_runner.py
app/services/: chat_service.py  indexing_service.py  repository_service.py  review_service.py
docker/sandbox/: Dockerfile
schemas/: chat_schema.py  repository_schema.py  review_schema.py  thread_schema.py
streamlit_app/: dashboard.py
streamlit_app/pages/: review_chat.py  review_detail.py
test/: check_1.5.py  check_models.py  test_chat_routes.py  test_chat_service.py  test_config.py  test_config_and_nodes.py  test_db_connection.py  test_docker_runner.py  test_fix.py  test_foundation.py  test_github_client.py  test_graph_nodes.py  test_graph_state.py  test_graph_workflow.py  test_hitl_routes.py  test_infrastructure_progress.py  test_message_model.py  test_parse_diff.py  test_repository_service.py  test_review_routes.py  test_review_service.py  test_sandbox_client.py  test_sandbox_parser.py  test_webhook.py
